--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -113,6 +113,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/overview_tv" />
 
+            <ProgressBar
+                android:id="@+id/trailers_loading_pb"
+                android:layout_width="41dp"
+                android:layout_height="42dp"
+                android:layout_centerInParent="true"
+                app:layout_constraintTop_toTopOf="@id/trailers_rv"
+                app:layout_constraintBottom_toBottomOf="@id/trailers_rv"
+                app:layout_constraintLeft_toLeftOf="@id/trailers_rv"
+                app:layout_constraintRight_toRightOf="@id/trailers_rv"/>
+
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
