--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -106,22 +106,25 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/trailers_rv"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/overview_tv" />
 
-            <ProgressBar
-                android:id="@+id/trailers_loading_pb"
-                android:layout_width="41dp"
-                android:layout_height="42dp"
-                android:layout_centerInParent="true"
+            <TextView
+                android:id="@+id/trailer_error_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/error_trailers"
+                android:layout_marginTop="32dp"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
                 app:layout_constraintTop_toTopOf="@id/trailers_rv"
                 app:layout_constraintBottom_toBottomOf="@id/trailers_rv"
                 app:layout_constraintLeft_toLeftOf="@id/trailers_rv"
-                app:layout_constraintRight_toRightOf="@id/trailers_rv"/>
+                app:layout_constraintRight_toRightOf="@id/trailers_rv" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
