--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp">
 
     <ImageView
         android:id="@+id/trailer_iv"
@@ -17,7 +19,7 @@
         android:id="@+id/play_icon_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_play_circle_outline"
+        android:src="@drawable/ic_play_circle_outline_white_24dp"
         app:layout_constraintBottom_toBottomOf="@+id/trailer_iv"
         app:layout_constraintEnd_toEndOf="@+id/trailer_iv"
         app:layout_constraintStart_toStartOf="@+id/trailer_iv"
@@ -28,15 +30,15 @@
         android:id="@+id/trailer_type_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:layout_marginEnd="8dp"
-        android:textSize="16sp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="4dp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/trailer_iv"
         app:layout_constraintEnd_toEndOf="@+id/trailer_iv"
         tools:text="@string/toolstext_trailer_type"
         android:layout_marginRight="8dp"
-        android:textColor="@android:color/white"/>
+        android:textColor="#E0E0E0"/>
 
     <TextView
         android:id="@+id/trailer_name_tv"
