--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -5,26 +5,27 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp">
+    android:layout_marginRight="4dp"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/trailer_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/trailer_a11y"
-        tools:src="@drawable/trailer_example"
-        android:tint="#5F000000"/>
+        android:tint="#5F000000"
+        tools:src="@drawable/trailer_example" />
 
     <ImageView
         android:id="@+id/play_icon_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/play_trailer_a11y"
         android:src="@drawable/ic_play_circle_outline_white_24dp"
         app:layout_constraintBottom_toBottomOf="@+id/trailer_iv"
         app:layout_constraintEnd_toEndOf="@+id/trailer_iv"
         app:layout_constraintStart_toStartOf="@+id/trailer_iv"
-        app:layout_constraintTop_toTopOf="@+id/trailer_iv"
-        android:contentDescription="@string/play_trailer_a11y"/>
+        app:layout_constraintTop_toTopOf="@+id/trailer_iv" />
 
     <TextView
         android:id="@+id/trailer_type_tv"
@@ -32,13 +33,13 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
         android:layout_marginEnd="4dp"
+        android:layout_marginRight="8dp"
+        android:textColor="#E0E0E0"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/trailer_iv"
         app:layout_constraintEnd_toEndOf="@+id/trailer_iv"
-        tools:text="@string/toolstext_trailer_type"
-        android:layout_marginRight="8dp"
-        android:textColor="#E0E0E0"/>
+        tools:text="@string/toolstext_trailer_type" />
 
     <TextView
         android:id="@+id/trailer_name_tv"
