--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -126,6 +126,30 @@
                 app:layout_constraintLeft_toLeftOf="@id/trailers_rv"
                 app:layout_constraintRight_toRightOf="@id/trailers_rv" />
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/reviews_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/trailers_rv" />
+
+            <TextView
+                android:id="@+id/reviews_error_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/error_reviews"
+                android:layout_marginTop="32dp"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                app:layout_constraintTop_toTopOf="@id/reviews_rv"
+                app:layout_constraintBottom_toBottomOf="@id/reviews_rv"
+                app:layout_constraintLeft_toLeftOf="@id/reviews_rv"
+                app:layout_constraintRight_toRightOf="@id/reviews_rv" />
+
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
