--- a/app/src/main/res/layout/poster_grid_item.xml
+++ b/app/src/main/res/layout/poster_grid_item.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground"
+    android:background="@color/colorPrimary">
 
     <ImageView
         android:id="@+id/list_item_poster"
