--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="4"
+            android:textSize="16sp"
             tools:text="@string/toolstext_review_content" />
 
         <TextView
@@ -31,6 +32,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
             android:gravity="end"
+            android:textSize="16sp"
             tools:text="@string/toolstext_review_author" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
