--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -10,17 +10,18 @@
     app:cardUseCompatPadding="true">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:padding="16dp">
 
         <TextView
             android:id="@+id/review_content_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="4"
+            android:textColor="@android:color/black"
             android:textSize="16sp"
             tools:text="@string/toolstext_review_content" />
 
@@ -32,6 +33,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
             android:gravity="end"
+            android:textColor="@android:color/black"
             android:textSize="16sp"
             tools:text="@string/toolstext_review_author" />
     </LinearLayout>
