--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="4"
+            android:minLines="1"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             tools:text="@string/toolstext_review_content" />
