--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -35,12 +35,13 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
                 android:src="@drawable/ic_favorite_border_white_24dp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/backdrop_iv"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/backdrop_iv"
-                android:layout_marginRight="16dp" />
+                app:layout_constraintTop_toBottomOf="@+id/backdrop_iv" />
 
             <TextView
                 android:id="@+id/title_tv"
