--- a/app/src/main/res/layout/error_message.xml
+++ b/app/src/main/res/layout/error_message.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/error_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_margin="16dp"
         android:drawablePadding="8dp"
-        android:drawableTop="@drawable/ic_error_outline_black_48dp"
-        android:gravity="center"
+        android:drawableTop="@drawable/ic_error_outline_white_48dp"
+        android:gravity="center_horizontal"
+        android:textColor="@android:color/white"
         android:textSize="16sp" />
 
     <Button
         android:id="@+id/retry_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:text="@string/button_try_again" />
 </LinearLayout>
