Rename package name

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.slackar.popularmovies.MainActivity"
+    tools:context="com.slackar.popularmovies.com.github.andarb.popularmovies.MainActivity"
     android:background="@color/colorPrimary">
 
     <android.support.v7.widget.RecyclerView
