--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.slackar.popularmovies.MovieDetailsActivity"
+    tools:context="com.slackar.popularmovies.com.github.andarb.popularmovies.MovieDetailsActivity"
     android:background="#f5f5f5">
 
     <ScrollView
@@ -213,7 +213,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/reviews_label_tv" />
 
-            <com.slackar.popularmovies.utils.ReviewRecycler
+            <com.github.andarb.popularmovies.utils.ReviewRecycler
                 android:id="@+id/reviews_rv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
