Remove old package name occurrences

--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.slackar.popularmovies.com.github.andarb.popularmovies.MovieDetailsActivity"
+    tools:context="com.github.andarb.popularmovies.MovieDetailsActivity"
     android:background="#f5f5f5">
 
     <ScrollView
