--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.github.andarb.popularmovies.MovieDetailsActivity"
-    android:background="#f5f5f5">
+    android:background="#f5f5f5"
+    tools:context="com.github.andarb.popularmovies.MovieDetailsActivity">
 
     <ScrollView
         android:id="@+id/movie_details_view"
@@ -18,13 +18,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <!-- Movie backdrop image with a floating button that adds/removes this movie to/from Favorites -->
+
             <ImageView
                 android:id="@+id/backdrop_iv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="192dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/backdrop_a11y"
+                android:minHeight="192dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -37,13 +39,14 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
                 android:src="@drawable/ic_favorite_border_white_24dp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/backdrop_iv"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/backdrop_iv" />
+
+            <!-- Main movie details: Title, Release Date, Average Rating -->
 
             <TextView
                 android:id="@+id/title_tv"
@@ -53,7 +56,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="4dp"
                 android:gravity="center_horizontal"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorTextContent"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -75,11 +78,7 @@
 
             <TextView
                 android:id="@+id/release_date_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
+                style="@style/MinorContent"
                 app:layout_constraintEnd_toEndOf="@id/release_date_label_tv"
                 app:layout_constraintStart_toStartOf="@id/release_date_label_tv"
                 app:layout_constraintTop_toBottomOf="@id/release_date_label_tv"
@@ -98,81 +97,55 @@
 
             <TextView
                 android:id="@+id/vote_average_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
+                style="@style/MinorContent"
                 app:layout_constraintEnd_toEndOf="@id/vote_average_label_tv"
                 app:layout_constraintStart_toStartOf="@id/vote_average_label_tv"
                 app:layout_constraintTop_toBottomOf="@id/vote_average_label_tv"
                 tools:text="@string/toolstext_vote_average" />
 
+            <!-- Movie overview -->
+
             <TextView
                 android:id="@+id/overview_label_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="28dp"
+                style="@style/MajorContentLabels"
                 android:text="@string/overview_label"
-                android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/release_date_tv" />
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginStart="24dp"
-                android:background="@android:color/darker_gray"
+                style="@style/LineSeparator"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/overview_label_tv" />
 
             <TextView
                 android:id="@+id/overview_tv"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginTop="8dp"
-                android:textColor="@android:color/black"
+                style="@style/MajorContentSpacing"
+                android:textColor="@color/colorTextContent"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/overview_label_tv"
                 app:layout_constraintTop_toBottomOf="@id/overview_label_tv"
                 tools:text="@string/toolstext_overview" />
 
+            <!-- Movie videos/trailers -->
+
             <TextView
                 android:id="@+id/videos_label_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="28dp"
+                style="@style/MajorContentLabels"
                 android:text="@string/videos_label"
-                android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/overview_tv" />
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginStart="24dp"
-                android:background="@android:color/darker_gray"
+                style="@style/LineSeparator"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/videos_label_tv" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/trailers_rv"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginTop="8dp"
+                style="@style/MajorContentSpacing"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/videos_label_tv"
                 app:layout_constraintTop_toBottomOf="@id/videos_label_tv" />
@@ -191,35 +164,24 @@
                 app:layout_constraintRight_toRightOf="@id/trailers_rv"
                 app:layout_constraintTop_toTopOf="@id/trailers_rv" />
 
+            <!-- User reviews of the movie -->
+
             <TextView
                 android:id="@+id/reviews_label_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="28dp"
+                style="@style/MajorContentLabels"
                 android:text="@string/reviews_label"
-                android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/trailers_rv" />
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginStart="24dp"
-                android:background="@android:color/darker_gray"
+                style="@style/LineSeparator"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/reviews_label_tv" />
 
             <com.github.andarb.popularmovies.utils.ReviewRecycler
                 android:id="@+id/reviews_rv"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginTop="8dp"
+                style="@style/MajorContentSpacing"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/reviews_label_tv"
                 app:layout_constraintTop_toBottomOf="@id/reviews_label_tv" />
@@ -240,6 +202,8 @@
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
+
+    <!-- A loading indicator and an error message view that are shown/hidden when necessary -->
 
     <ProgressBar
         android:id="@+id/details_loading_pb"
