--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <!-- Min/Max lines and ellipsize are manipulated to expand/collapse the review -->
         <TextView
             android:id="@+id/review_content_tv"
             android:layout_width="match_parent"
@@ -31,7 +32,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
             android:gravity="end"
             android:textColor="@android:color/black"
