--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f5f5f5"
-    tools:context="com.github.andarb.popularmovies.MovieDetailsActivity">
+    tools:context="com.andarb.popmovies.MovieDetailsActivity">
 
     <ScrollView
         android:id="@+id/movie_details_view"
@@ -179,7 +179,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/reviews_label_tv" />
 
-            <com.github.andarb.popularmovies.utils.ReviewRecycler
+            <com.andarb.popmovies.utils.ReviewRecycler
                 android:id="@+id/reviews_rv"
                 style="@style/MajorContentSpacing"
                 app:layout_constraintEnd_toEndOf="parent"
